2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed gnulib items.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	PR 18972

	* lib/getopt.c, lib/getopt1.c, lib/getopt_.h,
	lib/getopt_int.h, lib/unistd_.h, m4/getopt.m4,
	m4/unistd_h.m4: New files from gnulib to support 
	platforms without a GNU getopt implementation. 

	* jargrep.c: Moved inclusion of getopt.h before 
	inclusion of regex.h.

	* jartool.c: Include regex.h, as recommended by 
	gnulib-tool for the gnulib getopt functionality.

	* Makefile.in, aclocal.m4, config.h.in, configure,
	lib/Makefile.am, lib/Makefile.in, m4/gnulib-cache.m4,
	m4/gnulib-comp.m4: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* README: Added a 'platforms' section, and documented
	flags for the MingW32 build on Cygwin.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* NEWS : Added merging status information for 
	Bryan's 0.94 release on SourceForge. Updated version number
	to 0.95-pre.

	* README, configure.ac: Updated version number to 0.95-pre.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	PR 18973

	* Makefile.am (SUBDIRS, ACLOCAL_AMFLAGS): Added to support
	using gnulib's functionality.
	(AM_CPPFLAGS) Added lib directory for regex.h.
	(LDADD) Added libgnu.la.

	* configure.ac (gl_EARLY, gl_INIT): Added suppor for gnulib. 
	(AC_CONFIG_FILES) Added lib/Makefile.

	* Makefile.in, aclocal.m4, config.h.in, configure:
	Regenerated.

	* lib/Makefile.am, lib/Makefile.in, 
	lib/alloca.c, lib/alloca_.h, lib/dummy.c, 
	lib/gettext.h, lib/malloc.c, lib/regcomp.c,
	lib/regex.c, lib/regex.h, 
	lib/regex_internal.c, lib/regex_internal.h,
	lib/regexec.c, lib/stdint_.h,
	lib/strcasecmp.c, lib/string_.h,
	lib/strncasecmp.c, lib/wchar_.h, lib/wctype_.h,
	m4/absolute-header.m4, m4/alloca.m4, m4/codeset.m4,
	m4/extensions.m4, m4/gnulib-cache.m4, 
	m4/gnulib-common.m4, m4/gnulib-comp.m4,
	m4/gnulib-tool.m4, m4/longlong.m4, m4/regex.m4,
	m4/ssize_t.m4, m4/stdint.m4, m4/strcase.m4,