@@ -1,5 +1,16 @@
 2007-02-07  Dalibor Topic  <robilad@kaffe.org>
 
+	PR 18986
+
+	* lib/stdbool_.h, m4/stdbool.m4: New files from
+	gnulib to support stdbool.h on platforms without it.
+
+	* Makefile.in, aclocal.m4, config.h.in, configure,
+	lib/Makefile.am, lib/Makefile.in, m4/gnulib-cache.m4,
+	m4/gnulib-comp.m4: Regenerated.
+
+2007-02-07  Dalibor Topic  <robilad@kaffe.org>
+
 	* TODO: Removed gnulib items.
 
 2007-02-07  Dalibor Topic  <robilad@kaffe.org>
